--- a/todo_app/templates/todo_app/login.html
+++ b/todo_app/templates/todo_app/login.html
@@ -9,7 +9,7 @@
     <form method="POST">
         {% csrf_token %}
         {{form.as_p}}
-        <input class="button" type="submit" value="Login">
+        <input style="margin-top:10px ; margin-left: 12rem;" class="button" type="submit" value="Login">
     </form>
     <p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
 </div>
