--- a/todo_app/templates/todo_app/register.html
+++ b/todo_app/templates/todo_app/register.html
@@ -16,7 +16,7 @@
 
         <label>{{form.password2.label}}</label>
         {{form.password2}}
-        <input style="margin-top:10px ;" class="button" type="submit" value="Register">
+        <input style="margin-top:10px ; margin-left: 12rem;" class="button" type="submit" value="Register">
     </form>
     <p>Already have an account? <a href="{% url 'login' %}">Login here</a></p>
 </div>
