--- a/todo_app/templates/todo_app/task_confirm_delete.html
+++ b/todo_app/templates/todo_app/task_confirm_delete.html
@@ -1,12 +1,15 @@
 {% extends 'todo_app/main.html' %}
 {% block content %}
 
-<a href="{% url 'tasks' %}">Go Back</a>
-
+<div class="header-bar">
+    <a style="margin-right: 0;" href="{% url 'tasks' %}">Go Back</a>
 <form method="POST">
     {% csrf_token %}
-    <p>Are you sure you want to delete this task? "{{task}}</p>
-    <input type="submit" value="Delete">
+    <p>Are you sure you want to delete this task? {{task}}</p>
+    <input class="btn" type="submit" value="Confirm">
 </form>
+</div>
+
+
 
 {% endblock content %}
