--- a/todo_app/templates/todo_app/task_form.html
+++ b/todo_app/templates/todo_app/task_form.html
@@ -1,12 +1,18 @@
 {% extends 'todo_app/main.html' %}
 {% block content %}
 
-<h3>Task Form</h3>
-<a href="{% url 'tasks' %}">Go Back</a>
-<form method="POST" action="">
-    {%csrf_token%}
-    {{form.as_p}}
-    <input type="submit" value="Submit">
-</form>
+<div class="header-bar">
+    <h3>Task Form</h3>
+<a style="padding-left: 21rem;" href="{% url 'tasks' %}">Go Back</a>
+</div>
+
+<div class="card-body">
+    <form method="POST" action="">
+        {%csrf_token%}
+        {{form.as_p}}
+        <input type="submit" value="Submit">
+    </form>
+</div>
+
 
 {% endblock content %}
