--- a/todo_app/templates/todo_app/task_list.html
+++ b/todo_app/templates/todo_app/task_list.html
@@ -1,8 +1,6 @@
 {% extends 'todo_app/main.html' %}
 {% block content %}
 
-<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
-
 <div class="header-bar">
     <div >
         <h1>Hello {{request.user|title}}</h1>
@@ -31,26 +29,26 @@
 
 <div id="tasklist" class="task-items-wrapper">
     {% for task in tasks %}
-    <div class="task-wrapper" data-position="{{task.pk}}">
-        <div class="task-title">
-            {% if task.complete %}
+      <div class="task-wrapper" data-position="{{ task.pk }}">
+        <input type="checkbox" class="task-checkbox" data-task-id="{{ task.pk }}" {% if task.complete %}checked{% endif %}>  <div class="task-title">
+          {% if task.complete %}
             <div class="task-complete-icon"></div>
-            <i><s><a href="{% url 'task-update' task.id %}">{{task}}</a></s></i> {% else %}
+            <i><s><a href="{% url 'task-update' task.id %}">{{ task }}</a></s></i>
+          {% else %}
             <div class="task-incomplete-icon"></div>
-            <a href="{% url 'task-update' task.id %}">{{task}}</a> {% endif %}
+            <a href="{% url 'task-update' task.id %}">{{ task }}</a>
+          {% endif %}
         </div>
         <div class="task-controls">
             <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
-            <span class="handle">&nbsp;&#10247;</span>
-        </div>
-    </div>
-
+          </div>    
+      </div>
     {% empty %}
-    <div style="text-align: center; padding-bottom: 10px; line-height: 1em;">
+      <div style="text-align: center; padding-bottom: 10px; line-height: 1em;">
         <h3>No new tasks are created.</h3>
         <h3>Create a <a style="text-decoration: none; color: #e53935;" href="{% url 'task-create' %}">New task</a> ! </h3>
-    </div>
+      </div>
     {% endfor %}
-</div>
+  </div>
 
 {% endblock content %}
