--- a/todo_app/templates/todo_app/register.html
+++ b/todo_app/templates/todo_app/register.html
@@ -1,5 +1,6 @@
 {% extends 'todo_app/main.html' %}
 {% block content %}
+<link rel="stylesheet" href="static/styles.css">
 
 <div class="header-bar">
     <h1>Register</h1>
