--- a/todo_app/templates/todo_app/main.html
+++ b/todo_app/templates/todo_app/main.html
@@ -6,14 +6,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mako&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
     <title>To Do List</title>
 
     
 </head>
 
+<style></style>
 <body>
-
     <div class="container">
         {% block content %}
 
